<resources>
    <string name="app_name">Uper Client</string>
    <string name="hint_email">Email</string>
    <string name="hint_parola">Parola</string>
    <string name="hint_nume">Nume</string>
    <string name="hint_prenume">Prenume</string>
    <string name="hint_telefon">Telefon</string>
    <string name="hint_oras">Oraș</string>
    <string name="btn_login">Logare</string>
    <string name="btn_register">Inregistrare</string>
    <string name="btn_link_to_signup">Nu esti membru? Inregistreazate.</string>
    <string name="btn_link_to_login">Esti inregistrat? Logheaza-te.</string>
    <string name="welcome">Salut</string>
    <string name="btn_logout">Delogare</string>
    <string name="name">Fullname</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>

    <string name="command">Command</string>
    <string name="calcul_price">Calcul Price</string>
    <string name="client_info">Client Info</string>
    <string name="course_history">Course History</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="active_command">Active Command</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
