<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_command"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/command" />
        <item
            android:id="@+id/nav_activecommand"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/active_command" />
        <item
            android:id="@+id/nav_calculprice"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/calcul_price" />
        <item
            android:id="@+id/nav_clientinfo"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/client_info" />
        <item
            android:id="@+id/nav_coursehistory"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/course_history" />
    </group>

    <item android:title="@string/about">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/help" />
            <item
                android:id="@+id/nav_termsandconditions"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/terms_and_conditions" />
        </menu>
    </item>

</menu>